<resources>
    <string name="app_name">TravelSombrero</string>
    <string name="username_hint_registration">Username</string>
    <string name="email_hint_registration">Email</string>
    <string name="password_hint_registration">Password</string>
    <string name="register_button">Register</string>
    <string name="already_account_link">Already have an account?</string>
    <string name="login_button">Login</string>
    <string name="back_registration">Back to registration</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="logo">Logo</string>
    <string name="you_are_in">YOU ARE IN</string>
    <string name="search">Search</string>
    <string name="connection_error">Connection_error</string>
    <string name="xml_error">XML Error</string>
    <string name="news_and_updates">News and Updates</string>
    <string name="food_and_drink">Food and Drink</string>
    <string name="turistic_spots">Turistic Spots</string>
    <string name="item_pub_date">Item Pub Date</string>
    <string name="item_title">Item Title</string>
    <string name="item_link">Item Link</string>
    <string name="item_description">Item Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="legno">TODO</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>