<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colore_sfondo"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/usernameEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/username_hint_registration"
        android:inputType="textPersonName"
        android:paddingLeft="30dp"
        android:textColor="#000000"
        android:textColorHint="#636363"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/email_hint_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:textColor="#000000"
        android:textColorHint="#636363"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditTextRegister"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegister" />

    <EditText
        android:id="@+id/passwordEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/password_hint_registration"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:textColor="#000000"
        android:textColorHint="#636363"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextRegister"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegister" />

    <android.widget.Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register_button"
        android:textColor="#000000"
        android:textColorHint="#616161"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegister"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegister" />

    <TextView
        android:id="@+id/alreadyHaveAccountRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/already_account_link"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>