<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/emailEditTextLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/email_hint_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        android:textColor="#000000"
        android:textColorHint="#636363"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext_login"
        android:ems="10"
        android:hint="@string/password_hint_registration"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        android:textColor="#000000"
        android:textColorHint="#636363"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextLogin"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLogin" />

    <android.widget.Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLogin" />

    <TextView
        android:id="@+id/backToRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/back_registration"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>